feat(api): products list query (ST-0063) (#253)
